--- a/argo/wind-turbine-app.yaml
+++ b/argo/wind-turbine-app.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: demo
+    namespace: wind
     server: https://kubernetes.default.svc
   project: default
   source:
